# trafinject-1.MSVC

./: README.md
inject/: ReadMe.txt  StdAfx.h  inject.dsp  inject.dsw  inject.ncb  inject.opt  inject.plg
inject/Release/: ASSIGN_STATIC_IP.2218.cmd  inject.sh
trafinject-1/: ASSIGN_SERIAL_NUMBER.2218.cmd  ASSIGN_SERIAL_NUMBER.2428.cmd  ASSIGN_SERIAL_NUMBER.5428E.cmd  ASSIGN_STATIC_IP.2218.cmd  ASSIGN_STATIC_IP.2428.cmd  ASSIGN_STATIC_IP.5428E.cmd  CREATE_ACL_GROUP.2218.cmd  CREATE_ACL_GROUP.2428.cmd  CREATE_ACL_GROUP.5428E.cmd  Makefile.in  README.md  REBOOT.2218.cmd  REBOOT.2428.cmd  REBOOT.5428E.cmd  UPGRADE_FIRMWARE.2218.cmd  UPGRADE_FIRMWARE.2428.cmd  UPGRADE_FIRMWARE.5428E.cmd  autogen.cmd  auxiliary.c  auxiliary.h  cast.5428E.txt  cast.5428E.txt.voc  cast.5428E.txt.xml  compute_tabs.c  configure.ac  constants.h  dev-mac-id.base.txt  enroll.sh  functions.sh  gen_voHabulary.c  gen_vocabulary.c  inject.c  inject.h  lists.c  lists.h  make_xml.sh  opcodes.h  verbose.h  voc.c  voc.h  (+2 more)
